# WarhammerApp

./: CMakeLists.txt
Scripts/Abilities/: ReanimationProtocols.cpp  ReanimationProtocols.h  TheirNumberIsLegion.cpp  TheirNumberIsLegion.h
Scripts/Calculator/: WarhammerCalculator.cpp  WarhammerCalculator.h
Scripts/DiceRoller/: D6.cpp  D6.h
Scripts/Program/: WarhammerProgram.cpp  WarhammerProgram.h  main.cpp
Scripts/Units/: KabaliteWarriors.cpp  KabaliteWarriors.h  NecronWarrior.cpp  NecronWarrior.h  Unit.cpp  Unit.h
Scripts/Weapons/: Weapon.cpp  Weapon.h
